@@ -1,2 +1,10 @@
+2013-04-26  Gavin Salam  <gavin.salam@cern.ch> + Jesse & Andrew
+
+	* Makefile: 
+	added explicit dependencies
+
+	* example.cc (analyze): 
+	added a little bit of commented code for timing tests.
+
 2013-03-10 <jthaler>
    Initial creation
